<resources>
    <string name="app_name">ConectaMovil</string>
    <!--MAIN ACTIVITY -->
    <string name="Btn_login">Login</string>
    <string name="Btn_Registro">Registro</string>
    <!--ACTIVIDAD REGISTRO -->
    <string name="CrearCuenta">Crear una cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>
    <!-- MENU PRINCIPAL-->
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="ListaContactos">Contactos</string>
    <!-- LOGIN-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Login2">Ingresar</string>
    <string name="UsuarioNuevoTXT">No tienes una cuenta?. Registrate</string>
</resources>