<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="pantallaCarga.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/Btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_login"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/Btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_Registro"
            android:layout_marginTop="10dp"/>





    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>